--- a/style/style.css
+++ b/style/style.css
@@ -28,10 +28,16 @@ main {
 #user-utilities {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     background-color: #34A0A4;
     padding: 10px;
     color: #D9ED92;
+}
+
+.user-form {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 button {
@@ -57,10 +63,6 @@ button:hover {
     background-color: rgb(112, 111, 111);
 }
 
-input {
-    
-    
-}
 
 input[type="range"] {
     -webkit-appearance: none;
@@ -81,4 +83,29 @@ input[type="range"]::-webkit-slider-thumb {
     border-radius: 25px;
     margin-top: -8px;
     background:#184E77;
+}
+
+input[type="color"]{
+    -webkit-appearance: none;
+    border: none;
+    width: 200px;
+    background-color: transparent;
+    align-self: flex-start;
+    margin: 10px;
+    margin-left: 0px;
+}
+
+input[type='color']::-webkit-color-swatch-wrapper {
+    padding: 0;
+
+}
+  
+input[type='color']::-webkit-color-swatch {
+    border: none;
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+#reset {
+    align-self: flex-start;
 }
