--- a/style/style.css
+++ b/style/style.css
@@ -29,9 +29,10 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background-color: #34A0A4;
+    background-color: #1E6091;
     padding: 10px;
     color: #D9ED92;
+    border-radius: 3px;
 }
 
 .user-form {
@@ -59,8 +60,9 @@ button:hover {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    border: 10px solid #34A0A4;
+    border: 10px solid #1E6091;
     background-color: rgb(112, 111, 111);
+    border-radius: 3px;
 }
 
 
@@ -82,7 +84,7 @@ input[type="range"]::-webkit-slider-thumb {
     height: 24px;
     border-radius: 25px;
     margin-top: -8px;
-    background:#184E77;
+    background:#D9ED92;
 }
 
 input[type="color"]{
@@ -101,7 +103,7 @@ input[type='color']::-webkit-color-swatch-wrapper {
 }
   
 input[type='color']::-webkit-color-swatch {
-    border: none;
+    border: 2px solid #D9ED92;
     border-radius: 50px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
